--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-flagkit": "^2.0.4",
     "react-i18next": "^11.11.4",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^6.0.0-beta.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2",
