--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dicebear/avatars": "^4.9.1",
+    "@dicebear/avatars-identicon-sprites": "^4.9.1",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.4",
@@ -27,9 +29,11 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.0.0-beta.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
     "styled-components": "^5.3.0",
     "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
