--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "@dicebear/avatars-identicon-sprites": "^4.9.1",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.4",
-    "@material-ui/icons": "^5.0.0-beta.4",
-    "@material-ui/styled-engine-sc": "^5.0.0-beta.1",
-    "@material-ui/styles": "^5.0.0-beta.4",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
+    "@mui/styled-engine-sc": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -31,7 +30,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.1",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
