--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@dicebear/avatars-identicon-sprites": "^4.9.1",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "@mui/styled-engine-sc": "^5.0.0",
+    "@mui/icons-material": "^5.0.0-rc.1",
+    "@mui/lab": "^5.0.0-alpha.46",
+    "@mui/material": "^5.0.0-rc.1",
+    "@mui/styles": "^5.0.0-rc.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -30,7 +31,6 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
-    "styled-components": "^5.3.1",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
