finalize personal dashboard
changes:
- finalize personal dashboard info
- other adjustment & rework

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "chart.js": "^3.6.0",
     "formik": "^2.2.9",
     "history": "^5.0.1",
     "i18next": "^20.4.0",
@@ -23,6 +24,7 @@
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-flagkit": "^2.0.4",
     "react-i18next": "^11.11.4",
